Fix building GCM when GCM_USE_ARM_NEON defined but GCM_USE_ARM_PMULL not

* cipher/cipher-gcm.c (setupM): Remove ifdef around 'features'.
--

GnuPG-bug-id: 5796
Signed-off-by: Jussi Kivilinna <jussi.kivilinna@iki.fi>